removed raw asm files, supports x86_64, not ready for x86, arm and mips

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ rust: nightly
 
 script:
     - cargo test -v
+    - cargo run --example simple
+    - cargo run --example conditional
+    - cargo run --example asymmetric
