--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,13 @@ license = "MIT/ISC"
 repository = "https://github.com/zonyitoo/context-rs"
 description = "Context in Rust"
 readme = "README.md"
-build = "build.rs"
-links = "ctxswtch"
 keywords = ["context"]
-
-[build-dependencies]
-gcc = "^0.3.12"
-log = "^0.3.1"
 
 [dependencies]
 memmap = "^0.2"
 libc = "^0.1.10"
 log = "^0.3.1"
+
+[profile.release]
+debug = true
+debug-assertions = true
